# Psycopshysics-mousetracking

./: .gitignore  README.md  build_standalone.py  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API.md  CONFIGURATION.md  EXAMPLES.md  QUICKSTART.md  README.md
tracking_analysis/: __init__.py
tracking_analysis/cli/: __init__.py  main.py
tracking_analysis/core/: __init__.py  config.py  cross_correlation.py  data_loader.py  metrics.py  preprocessing.py  state_manager.py  statistics.py
tracking_analysis/docs/: README.md
tracking_analysis/templates/: default_questions.yaml
tracking_analysis/tests/: __init__.py  conftest.py  test_cross_correlation.py  test_data_loader.py  test_metrics.py  test_preprocessing.py  test_state_manager.py  test_statistics.py
tracking_analysis/ui/: __init__.py  app.py
tracking_analysis/ui/components/: __init__.py
tracking_analysis/visualization/: __init__.py  animation.py  report_builder.py  static_plots.py
